@@ -52,6 +52,7 @@
             No longer call jsvKill/Init when resetting, but just jsvReset (this avoids free+malloc on ESP32)
             Bangle.js2: Bangle.setLCDOverlay can now take an object with {id:str, remove:fn} to deal with multiple users of overlays better
             Bangle.js1: Fix issue where going out of and back into a menu would cause 'Back' to be added twice (fix #2470)
+            Bangle.js2: Added Graphics.filter (to allow gaussian/etc filters to be applied to graphics instances for borders/blur)
 
      2v21 : nRF52: free up 800b more flash by removing vector table padding
             Throw Exception when a Promise tries to resolve with another Promise (#2450)
